--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
@@ -23,7 +23,7 @@ directly derived from the Java build path (each entry maps to one or more packag
 getPackageFragmentRoots</a></b>).
 
 <P>
-This section does not cover the Java runtime path which can be defined separately, see the related section on how to <b><a href="../guide/jdt_api_run">run Java programs</a></b>.
+This section does not cover the Java runtime path which can be defined separately, see the related section on how to <b><a href="../guide/jdt_api_run.htm">run Java programs</a></b>.
 
 <h3>
 Changing the build path</h3>
