--- a/bundles/org.eclipse.test/readme.html
+++ b/bundles/org.eclipse.test/readme.html
@@ -6,7 +6,7 @@
 
 <body bgcolor="#FFFFFF" text="#000000">
 <font size="+2"> Automated Testing of Eclipse Builds</font>
-<p>last updated: September 30, 2002</p>
+<p>last updated: October 23, 2002</p>
 <p><font size="+1">Description</font></p>
 <p>This document describes how to run JUnit test plugins in Eclipse from the command 
   line using Eclipse JUnit test plugins (see <a href="#appendixa">Appendix A</a> 
@@ -101,7 +101,7 @@ test target. On *nix systems, the os, ws and arch parameters must be specified.
   test target is run.</p>
 
 <table width="90%" border="1">
-  <tr>
+  <tr> 
     <td>all</td>
     <td>Runs all the targets below excluding the JDT-Core components tests.</td>
   </tr>
@@ -109,6 +109,10 @@ test target. On *nix systems, the os, ws and arch parameters must be specified.
     <td>all14</td>
     <td>Runs all the JDT-Core component tests and genHtml. This target requires 
       a 1.4 level java virtual machine on the path.</td>
+  </tr>
+  <tr>
+    <td>ant</td>
+    <td>Runs the JUnit plugin tests for the Platform-Ant component.</td>
   </tr>
   <tr> 
     <td>core</td>
