Updated running.html to include classloader.properties file.

--- a/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
@@ -273,6 +273,17 @@ The general form of running the Eclipse executable is:</p>
         Example values: &quot;en_US&quot; and &quot;fr_FR_EURO&quot;.</TD>
       <TD width="2%">2.0</TD>
     </tr>
+    <tr> 
+      <TD vAlign=top width="33%">
+<pre><b>-classloaderProperties</b> <var>[file]</var></pre></TD>
+      
+    <TD width="65%">Activates platform class loader enhancements using the class 
+      loader properties file at the given location, if specified. The file argument 
+      can be either a file path or a URL. Note that relative URLs are not allowed. 
+      Click <a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/platform-core-home/docs/classloader-properties/classloader_properties.html">here</a> 
+      for more details.</TD>
+    <TD width="2%">2.0.2</TD>
+    </tr>
   </TBODY>
 </TABLE>
 
