Add Open Resource accelerator

--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -222,7 +222,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">(JDT Debug) Run to Line</TD>
-<TD ALIGN="left">&nbsp;</TD>
+<TD ALIGN="left">Navigate / Open Resource</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
