modified text replacement strings for team cvs tests

--- a/bundles/org.eclipse.test/readme.html
+++ b/bundles/org.eclipse.test/readme.html
@@ -49,10 +49,10 @@
     file:</p>
 </blockquote>
 <ul>
-  <li>${user} - the account used to connect to the cvs repository</li>
-  <li>${password}- the account password</li>
-  <li>${host}- the name of the cvs server</li>
-  <li>${root}- the repository path 
+  <li>@cvs_user@ - the account used to connect to the cvs repository</li>
+  <li>@cvs_password@- the account password</li>
+  <li>@cvs_host@- the name of the cvs server</li>
+  <li>@cvs_root@- the repository path 
     <p>These values are used at test time to automatically replace strings in 
       org.eclipse.team.tests.cvs.core/repository.properties. For more information 
       on how this file is used in the team CVS tests, click <a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.team.tests.cvs.core/readme.html?rev=HEAD&content-type=text/html">here</a>. 
