Fix for bug 16872: can't supply path to .options.

--- a/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
@@ -160,13 +160,13 @@ The general form of running the Eclipse executable is:</p>
     </TR>
     <TR> 
       <TD vAlign=top width="33%">
-<PRE><b>-debug</b> [<var>optionsFileURL</var>]</PRE></TD>
+<PRE><b>-debug</b> [<var>optionsFile</var>]</PRE></TD>
       <TD width="65%"> Puts the platform in debug mode and loads the debug options 
-        from the file at the given URL, if specified. This file indicates which 
+        from the file at the given location, if specified. This file indicates which 
         debug points are available for a plug-in and whether or not they are enabled. 
-        If a file path is not given, the platform looks in the directory that 
-        eclipse was started from for a file called ".options". Note that relative 
-        URLs are not allowed. </TD>
+        If a file location is not given, the platform looks in the directory that 
+        eclipse was started from for a file called ".options". Both URLs and file system 
+        paths are allowed as file locations. </TD>
       <TD width="2%">1.0</TD>
     </TR>
     <TR> 
