corrected information in readme on running of teamcvs tests

--- a/bundles/org.eclipse.test/readme.html
+++ b/bundles/org.eclipse.test/readme.html
@@ -43,10 +43,10 @@
   2. Place the Eclipse SDK zip file to test in the eclipse-testing directory. 
   Do not unzip this file. (The test scripts will take care of this)<br>
   3. To run the Team CVS tests edit the test.xml script to provide connection 
-  information:</p>
+  information.</p>
 <blockquote> 
-  <p>Edit the following properties in the &quot;teamcvs&quot; target of the org.eclipse.team.tests.cvs.core/test.xml 
-    file:</p>
+  <p>Replace the following strings in the &quot;teamcvs&quot; target of the test.xml 
+    file with the information described below:</p>
 </blockquote>
 <ul>
   <li>@cvs_user@ - the account used to connect to the cvs repository</li>
