--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -14,7 +14,7 @@ Eclipse Project Release Notes</h1>
 <p>
 
 Pre-release 2.1.0<br>
-Last revised October 21, 2002</p>
+Last revised December 10, 2002</p>
 
 <p>
 
@@ -47,7 +47,7 @@ OSI Certified is a certification mark of the Open Source Initiative.</strong></p
 
 <p>Most of the Eclipse SDK is &quot;pure&quot; Java™ code and has no direct
 dependence on the underlying operating system. The chief dependence is therefore
-on the Java 2 Platform itself. Like the 2.0 release 2.1 release of the Eclipse
+on the Java 2 Platform itself. Like the 2.0 release, the 2.1 release of the Eclipse
 Project is written and compiled against version 1.3 of the Java 2 Platform APIs,
 and targeted to run on either version 1.3 or 1.4 of the Java 2 Runtime
 Environment, Standard Edition.</p>
@@ -56,69 +56,81 @@ Platform implementations:</p>
 <table width="91%" border="1">
   <tbody>
     <tr>
-      <td width="19%"><b>Operating system</b></td>
+      <td width="21%"><b>Operating system</b></td>
       <td width="18%"><b>Processor architecture</b></td>
       <td width="73%"><b>Java 2 Platforms</b></td>
     </tr>
     <tr>
-      <td width="19%" rowSpan="4">Microsoft®<br>
+      <td width="21%" rowSpan="4">Microsoft®<br>
         Windows®</td>
       <td width="18%" rowSpan="4">Intel x86</td>
-      <td width="73%">Sun Java 2 SDK, Standard Edition, version 1.3.1_04 for
+      <td width="73%">  
+        Sun Java 2 SDK, Standard Edition, version 1.3.1_06 for 
         Microsoft Windows</td>
     </tr>
     <tr>
-      <td width="73%">Sun Java 2 SDK, Standard Edition, version 1.4.1 for
-        Microsoft Windows</td>
+      <td width="73%">  
+        Sun Java 2 SDK, Standard Edition, version 1.4.1_01 for Microsoft 
+        Windows</td>
     </tr>
     <tr>
-      <td width="73%">IBM Developer Kit for Windows, Java 2 Technology Edition,
+      <td width="73%"> IBM Developer Kit for Windows, Java 2 Technology Edition, 
         version 1.3.1 SR-1</td>
     </tr>
     <tr>
-      <td width="73%">IBM 32-bit SDK for Windows, Java 2 Technology Edition,
+      <td width="73%"> IBM 32-bit SDK for Windows, Java 2 Technology Edition, 
         version 1.4.0</td>
     </tr>
     <tr>
-      <td width="19%" rowSpan="3">Linux</td>
+      <td width="21%" rowSpan="3">Linux</td>
       <td width="18%" rowSpan="3">Intel x86</td>
-      <td width="73%">Sun Java 2 SDK, Standard Edition, version 1.3.1_04 for
+      <td width="73%">  
+        Sun Java 2 SDK, Standard Edition, version 1.3.1_06 for 
         Linux x86</td>
     </tr>
     <tr>
-      <td width="73%">Sun Java 2 SDK, Standard Edition, version 1.4.1 for Linux
+      <td width="73%">  
+        Sun Java 2 SDK, Standard Edition, version 1.4.1_01 for Linux 
         x86</td>
     </tr>
     <tr>
-      <td width="73%">IBM Developer Kit for Linux, Java 2 Technology Edition,
+      <td width="73%"> IBM Developer Kit for Linux, Java 2 Technology Edition, 
         version 1.3.1 SR-1</td>
     </tr>
     <tr>
-      <td width="19%" rowSpan="2">Sun Solaris</td>
+      <td width="21%" rowSpan="2">Sun Solaris</td>
       <td width="18%" rowSpan="2">SPARC</td>
-      <td width="73%">Sun Java 2 SDK, Standard Edition, version 1.3.1_04 for
+      <td width="73%">  
+        Sun Java 2 SDK, Standard Edition, version 1.3.1_06 for 
         Solaris SPARC</td>
     </tr>
     <tr>
-      <td width="73%">Sun Java 2 SDK, Standard Edition, version 1.4.1 for
-        Solaris SPARC</td>
+      <td width="73%">  
+        Sun Java 2 SDK, Standard Edition, version 1.4.1_01 for Solaris 
+        SPARC</td>
     </tr>
     <tr>
-      <td width="19%">HP HP-UX</td>
+      <td width="21%">HP HP-UX</td>
       <td width="18%">hp9000 PA-RISC</td>
       <td width="73%"><span class="header">HP-UX SDK for the Java 2 platform,
         version 1.3.1 for hp9000 PA-RISC</span></td>
     </tr>
     <tr>
-      <td width="19%">IBM® AIX</td>
+      <td width="21%">IBM® AIX</td>
       <td width="18%">PowerPC</td>
-      <td width="73%">IBM Developer Kit for AIX, Java 2 Technology Edition,
-        version 1.3.1</td>
+      <td width="73%"> IBM Developer Kit for AIX, Java 2 Technology Edition, version 
+        1.3.1</td>
     </tr>
     <tr>
-      <td width="19%">Apple® Mac® OS</td>
+      <td width="21%">Apple® Mac® OS</td>
       <td width="18%">PowerPC</td>
       <td width="73%">Java 2 Standard Edition 1.3.1 for Mac OS X 10.2</td>
+    </tr>
+    <tr>
+      <td width="21%"><span class="title">QNX</span>®<span class="title"> Neutrino</span>®<span class="title">
+        RTOS</span></td>
+      <td width="18%">Intel x86</td>
+      <td width="73%">IBM J9 VM for QNX, version 2.0</td>
     </tr>
   </tbody>
 </table>
@@ -130,89 +142,95 @@ means a configuration which is only lightly tested; &quot;Untested&quot; means a
 configuration that has received no testing, but which should work. Note that the
 Mac OS X configuration is considered early access 
   for the 2.1 release; it has been tested, but is not product quality in this release.</p>
-<table width="91%" border="1">
+<table width="91%" border="1" height="415">
   <tbody>
-    <tr>
-      <td width="11%"><b>Window system</b></td>
-      <td width="28%"><b>Java 2 Platform<br>
+    <tr> 
+      <td width="11%" height="32"><b>Window system</b></td>
+      <td width="28%" height="32"><b>Java 2 Platform<br>
         (see above table)</b></td>
-      <td width="42%"><b>Operating Environment</b></td>
-      <td width="19%"><b>Testing Status</b></td>
+      <td width="42%" height="32"><b>Operating Environment</b></td>
+      <td width="19%" height="32"><b>Testing Status</b></td>
     </tr>
-    <tr>
-      <td width="11%" rowSpan="5">Win32</td>
-      <td width="28%" rowSpan="5">Windows on Intel x86</td>
-      <td width="42%">Windows XP</td>
-      <td width="19%">Primary</td>
+    <tr> 
+      <td width="11%" rowSpan="5" height="104">Win32</td>
+      <td width="28%" rowSpan="5" height="104">Windows on Intel x86</td>
+      <td width="42%" height="16">Windows XP</td>
+      <td width="19%" height="16">Primary</td>
     </tr>
-    <tr>
-      <td width="42%">Windows 2000</td>
-      <td width="19%">Primary</td>
+    <tr> 
+      <td width="42%" height="16">Windows 2000</td>
+      <td width="19%" height="16">Primary</td>
     </tr>
-    <tr>
-      <td width="42%">Windows ME</td>
-      <td width="19%">Secondary</td>
+    <tr> 
+      <td width="42%" height="16">Windows ME</td>
+      <td width="19%" height="16">Secondary</td>
     </tr>
-    <tr>
-      <td width="42%">Windows 98SE</td>
-      <td width="19%">Secondary</td>
+    <tr> 
+      <td width="42%" height="16">Windows 98SE</td>
+      <td width="19%" height="16">Secondary</td>
     </tr>
-    <tr>
-      <td width="42%">Windows NT</td>
-      <td width="19%">Secondary</td>
+    <tr> 
+      <td width="42%" height="16">Windows NT</td>
+      <td width="19%" height="16">Secondary</td>
     </tr>
-    <tr>
-      <td width="11%" rowSpan="6">Motif</td>
-      <td width="28%" rowSpan="3">&nbsp;
-        <p>Linux on Intel x86</p>
-        <p>&nbsp;</p>
-      </td>
-      <td width="42%">RedHat Linux 7.2 x86</td>
-      <td width="19%">Primary</td>
+    <tr> 
+      <td width="11%" rowSpan="6" height="152">Motif</td>
+      <td width="28%" rowSpan="3" height="86">&nbsp; <p>Linux on Intel x86</p>
+        <p>&nbsp;</p></td>
+      <td width="42%" height="25">RedHat Linux 7.2 x86</td>
+      <td width="19%" height="25">Primary</td>
     </tr>
-    <tr>
-      <td width="42%">SuSE Linux 7.3 x86</td>
-      <td width="19%">Primary</td>
+    <tr> 
+      <td width="42%" height="25">SuSE Linux 7.3 x86</td>
+      <td width="19%" height="25">Primary</td>
     </tr>
-    <tr>
-      <td width="42%">Other Linux; kernel version 2.4.7, and XFree86 version
-        4.1.0</td>
-      <td width="19%">Untested</td>
+    <tr> 
+      <td width="42%" height="24">Other Linux; kernel version 2.4.7, and XFree86 version 4.1.0</td>
+      <td width="19%" height="24">Untested</td>
     </tr>
-    <tr>
-      <td width="28%">Solaris on SPARC&nbsp;</td>
-      <td width="42%">Sun Solaris 8 SPARC</td>
-      <td width="19%">Primary</td>
+    <tr> 
+      <td width="28%" height="16">Solaris on SPARC&nbsp;</td>
+      <td width="42%" height="16">Sun Solaris 8 SPARC</td>
+      <td width="19%" height="16">Primary</td>
     </tr>
-    <tr>
-      <td width="28%">HP-UX on hp9000 PA-RISC</td>
-      <td width="42%">HP-UX 11i hp9000</td>
-      <td width="19%">Primary</td>
+    <tr> 
+      <td width="28%" height="16">HP-UX on hp9000 PA-RISC</td>
+      <td width="42%" height="16">HP-UX 11i hp9000</td>
+      <td width="19%" height="16">Primary</td>
     </tr>
-    <tr>
-      <td width="28%">AIX on PowerPC</td>
-      <td width="42%">IBM AIX 5.1 on PowerPC</td>
-      <td width="19%">Primary</td>
+    <tr> 
+      <td width="28%" height="16">AIX on PowerPC</td>
+      <td width="42%" height="16">IBM AIX 5.1 on PowerPC</td>
+      <td width="19%" height="16">Primary</td>
     </tr>
-    <tr>
-      <td width="11%" rowSpan="3">GTK</td>
-      <td width="28%" rowSpan="3">Linux on Intel x86</td>
-      <td width="42%">RedHat Linux 7.2 x86 GTK 2.0</td>
-      <td width="19%">Primary</td>
+    <tr> 
+      <td width="11%" rowSpan="4" height="81">GTK</td>
+      <td width="28%" rowSpan="4" height="81">Linux on Intel x86</td>
     </tr>
-    <tr>
-      <td width="42%">SuSE Linux 7.3 x86 GTK 2.0</td>
-      <td width="19%">Primary</td>
+    <tr> 
+      <td height="15">RedHat Linux 7.2 x86 GTK 2.0</td>
+      <td height="15">Primary</td>
     </tr>
-    <tr>
-      <td width="42%">Other Linux; kernel version 2.4.7, and GTK 2.0</td>
-      <td width="19%">Untested</td>
+    <tr> 
+      <td width="42%" height="16">SuSE Linux 7.3 x86 GTK 2.0</td>
+      <td width="19%" height="16">Primary</td>
     </tr>
-    <tr>
-      <td width="11%">Carbon</td>
-      <td width="28%">Mac OS X on PowerPC</td>
-      <td width="42%">Mac OS X 10.2</td>
-      <td width="19%"><i>Early access</i></td>
+    <tr> 
+      <td width="42%" height="16">Other Linux; kernel version 2.4.7, and GTK 2.0</td>
+      <td width="19%" height="16">Untested</td>
+    </tr>
+    <tr> 
+      <td width="11%" height="16">Carbon</td>
+      <td width="28%" height="16">Mac OS X on PowerPC</td>
+      <td width="42%" height="16">Mac OS X 10.2</td>
+      <td width="19%" height="16"><i>Early access</i></td>
+    </tr>
+    <tr> 
+      <td width="11%" height="16"> 
+        Photon®</td>
+      <td width="28%" height="16">IBM J9 VM for QNX</td>
+      <td width="42%" height="16">QNX Neutrino RTOS 6.2.1&nbsp;</td>
+      <td width="19%" height="16">Primary</td>
     </tr>
   </tbody>
 </table>
@@ -253,36 +271,40 @@ localized for BIDI locales and its widget orientation cannot be changed.</p>
 2. <a name="Compatibility with Previous Release"></a> Compatibility with Previous Releases</h2>
 
 <h3>Compatibility of Release 2.1 with 2.0</h3>
-The Eclipse SDK 2.1 is intended to be upwards compatible with Eclipse SDK 2.0.
+ Eclipse SDK 2.1 is intended to be upwards compatible with Eclipse SDK 2.0.
 We have made exceptions only in areas where slavishly maintaining compatibility
 would not be in the best interests of Eclipse or its clients. The exceptions are
-noted in the next section.
-<p><b>API Contract Compatibility:</b> The Eclipse SDK 2.1 will be upwards
-contract-compatible with the Eclipse SDK 2.0 unless noted. This means that
-programs in full compliance with contracts specified in the Eclipse SDK 2.0 APIs
-will automatically be in full compliance with the Eclipse SDK 2.1 APIs. (API is
+noted in the next section.<p><b>API Contract Compatibility:</b> Eclipse SDK 2.1 will be upwards
+contract-compatible with Eclipse SDK 2.0 unless noted. This means that
+programs in full compliance with contracts specified in Eclipse SDK 2.0 APIs
+will automatically be in full compliance with Eclipse SDK 2.1 APIs. (API is
 construed broadly to include such things as plug-in extension points.) Downward
 contract compatibility is not supported. There is no guarantee that compliance
-with the Eclipse SDK 2.1 APIs would ensure compliance with the Eclipse SDK 2.0
-APIs.</p>
-<p><b>Binary (plug-in) Compatibility:</b> The Eclipse SDK 2.1 will be upwards
-binary-compatible with the Eclipse SDK 2.0 unless noted. This means that
-plug-ins built for the Eclipse SDK 2.0 will continue to work correctly in the
+with Eclipse SDK 2.1 APIs would ensure compliance with Eclipse SDK 2.0
+APIs. Refer to <i><a href="http://eclipse.org/eclipse/development/java-api-evolution.html">Evolving
+Java-based APIs</a></i> for a discussion of the kinds of API changes that
+maintain contract compatibility.</p>
+<p><b>Binary (plug-in) Compatibility:</b> Eclipse SDK 2.1 will be upwards
+binary-compatible with Eclipse SDK 2.0 unless noted. This means that
+plug-ins built for Eclipse SDK 2.0 will continue to work correctly in
 Eclipse SDK 2.1 without change. Downward plug-in compatibility is not supported.
-Plug-ins for the Eclipse SDK 2.1 are unlikely to be usable in the Eclipse SDK
+Plug-ins for Eclipse SDK 2.1 are unlikely to be usable in Eclipse SDK
 2.0. Plug-ins with hard-coded references in their plug-in manifest file to 2.0
 versions of prerequisite Eclipse Project plug-ins will work in 2.1 provided the
 version match rule is &quot;greaterOrEqual&quot; or &quot;compatible&quot; (the
 default); references using &quot;perfect&quot; or &quot;equivalent&quot; match
-rules will be broken.
-<p><b>Source Compatibility:</b> The Eclipse SDK 2.1 will be upwards
-source-compatible with the Eclipse SDK 2.0 unless noted. This means that source
-files written to use the Eclipse SDK 2.0 APIs can be successfully compiled and
-run against the Eclipse SDK 2.1 APIs. Since source incompatibilities are easy to
+rules will be broken. 
+ Refer to <i><a href="http://eclipse.org/eclipse/development/java-api-evolution.html">Evolving
+Java-based APIs</a></i> for a discussion of the kinds of API changes that
+maintain binary compatibility.
+<p><b>Source Compatibility:</b> Eclipse SDK 2.1 will be upwards
+source-compatible with Eclipse SDK 2.0 unless noted. This means that source
+files written to use Eclipse SDK 2.0 APIs can be successfully compiled and
+run against Eclipse SDK 2.1 APIs. Since source incompatibilities are easy to
 deal with, maintaining source compatibility is considered much less important
 than maintaining contract and binary compatibility. Downward source
 compatibility is not supported. If source files use new Eclipse SDK APIs, they
-will not be usable with an earlier version of the Eclipse SDK.
+will not be usable with an earlier version of Eclipse SDK.
 <p><b>Workspace Compatibility:</b> Eclipse SDK 2.1 will be upwards
 workspace-compatible with Eclipse SDK 2.0 unless noted. This means that
 workspaces and projects created with Eclipse SDK 2.0 can be successfully opened
@@ -314,53 +336,53 @@ Platform -
 UI</h3>
 
 <p>
-<i>None.</i></p>
+<i>[TBD]</i></p>
 
 <h3>Platform - Debug</h3>
 
 <p>
-<i>None.</i></p>
+<i>[TBD]</i></p>
 
 <h3>
 Platform -
 Core</h3>
 
 <p>
-<i>None.</i></p>
+<i>[TBD]</i></p>
 
 <h3>Platform - Help</h3>
 
 <p>
-<i>None.</i></p>
+<i>[TBD]</i></p>
 
 <h3>
 Platform - Install/Update</h3>
 
 <p>
-<i>None.</i></p>
+<i>[TBD]</i></p>
 
 <h3>Platform - Team</h3>
 
 <p>
-<i>None.</i></p>
+<i>[TBD]</i></p>
 
 <h3>
  JDT - Core</h3>
 
 <p>
-<i>None.</i></p>
+<i>[TBD]</i></p>
 
 <h3>
  JDT - UI</h3>
 
 <p>
-<i>None.</i></p>
+<i>[TBD]</i></p>
 
 <h3>
  PDE</h3>
 
 <p>
-<i>None.</i></p>
+<i>[TBD]</i></p>
 
 <h3>
 4.2 Incompatibilities between release 2.0 and 1.0</h3>
