Updated command-line arguments.

--- a/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
@@ -276,7 +276,6 @@ The general form of running the Eclipse executable is:</p>
     <tr> 
       <TD vAlign=top width="33%">
 <pre><b>-classloaderProperties</b> <var>[file]</var></pre></TD>
-      
     <TD width="65%">Activates platform class loader enhancements using the class 
       loader properties file at the given location, if specified. The file argument 
       can be either a file path or a URL. Note that relative URLs are not allowed. 
@@ -284,6 +283,15 @@ The general form of running the Eclipse executable is:</p>
       for more details.</TD>
     <TD width="2%">2.0.2</TD>
     </tr>
+    <tr> 
+      <TD vAlign=top width="33%">
+<pre><b>-noLazyRegistryCacheLoading</b></pre></TD>
+    <TD width="65%">Deactivates platform plug-in registry cache loading optimization. 
+    By default, extensions' configuration elements will be loaded from the registry cache 
+    (when available) only on demand, reducing memory footprint. This option will force the 
+    registry cache to be fully loaded at startup.</TD>
+    <TD width="2%">2.1</TD>
+    </tr>    
   </TBODY>
 </TABLE>
 
