fix for chkpii errors

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -14,7 +14,7 @@ Eclipse Project Release Notes</h1>
 <p>
 
 Pre-release 2.1.0<br>
-Last revised December 10, 2002</p>
+Last revised January 28, 2003</p>
 
 <p>
 
@@ -45,7 +45,7 @@ OSI Certified is a certification mark of the Open Source Initiative.</strong></p
 
 
 
-<p>Most of the Eclipse SDK is &quot;pure&quot; Java™ code and has no direct
+<p>Most of the Eclipse SDK is &quot;pure&quot; Java&trade; code and has no direct
 dependence on the underlying operating system. The chief dependence is therefore
 on the Java 2 Platform itself. Like the 2.0 release, the 2.1 release of the Eclipse
 Project is written and compiled against version 1.3 of the Java 2 Platform APIs,
@@ -61,8 +61,8 @@ Platform implementations:</p>
       <td width="73%"><b>Java 2 Platforms</b></td>
     </tr>
     <tr>
-      <td width="21%" rowSpan="4">Microsoft®<br>
-        Windows®</td>
+      <td width="21%" rowSpan="4">Microsoft&reg;<br>
+        Windows&reg;</td>
       <td width="18%" rowSpan="4">Intel x86</td>
       <td width="73%">  
         Sun Java 2 SDK, Standard Edition, version 1.3.1_06 for 
@@ -116,18 +116,18 @@ Platform implementations:</p>
         version 1.3.1 for hp9000 PA-RISC</span></td>
     </tr>
     <tr>
-      <td width="21%">IBM® AIX</td>
+      <td width="21%">IBM&reg; AIX</td>
       <td width="18%">PowerPC</td>
       <td width="73%"> IBM Developer Kit for AIX, Java 2 Technology Edition, version 
         1.3.1</td>
     </tr>
     <tr>
-      <td width="21%">Apple® Mac® OS</td>
+      <td width="21%">Apple&reg; Mac&reg; OS</td>
       <td width="18%">PowerPC</td>
       <td width="73%">Java 2 Standard Edition 1.3.1 for Mac OS X 10.2</td>
     </tr>
     <tr>
-      <td width="21%"><span class="title">QNX</span>®<span class="title"> Neutrino</span>®<span class="title">
+      <td width="21%"><span class="title">QNX</span>&reg;<span class="title"> Neutrino</span>&reg;<span class="title">
         RTOS</span></td>
       <td width="18%">Intel x86</td>
       <td width="73%">IBM J9 VM for QNX, version 2.0</td>
@@ -227,7 +227,7 @@ Mac OS X configuration is considered early access
     </tr>
     <tr> 
       <td width="11%" height="16"> 
-        Photon®</td>
+        Photon&reg;</td>
       <td width="28%" height="16">IBM J9 VM for QNX</td>
       <td width="42%" height="16">QNX Neutrino RTOS 6.2.1&nbsp;</td>
       <td width="19%" height="16">Primary</td>
@@ -880,11 +880,11 @@ variables so that the command line tool will work. (<a href="http://bugs.eclipse
 establish the connection you must exit and restart Eclipse. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=9295">bug
 9295</a>)</font></p>
 <h4><font color="#00FF00">CVS meta-folders appear in some cases</font></h4>
-<p><font color="#00FF00"><font FACE="Times New Roman">There are some cases where CVS folders are not
+<p><font color="#00FF00">There are some cases where CVS folders are not
 hidden from the UI as the user would expect. For instance, CVS folders will
 appear if a user imports a CVS project into Eclipse before the CVS plug-in is
 loaded. To avoid this, open the CVS Repositories view (thus loading the CVS
-plug-in) before importing CVS projects into Eclipse.</font> (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=12386">bug
+plug-in) before importing CVS projects into Eclipse. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=12386">bug
 12386</a>)</font></p>
 <h4><font color="#00FF00">&quot;Received broken pipe signal&quot; error from server</font></h4>
 <p><font color="#00FF00">Eclipse sometime performs multiple commands within a single connection to the
@@ -1395,7 +1395,7 @@ United States, other countries, or both.</p>
 Microsoft Corporation in the United States, other countries, or both.</p>
 <p>Other company, product, and service names may be trademarks or service marks
 of others.</p>
-<p>(c) Copyright IBM Corp. and others 2002</p>
+<p>(c) Copyright IBM Corp. and others 2003</p>
 
 </body>
 </html>
