--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -14,7 +14,7 @@
   <li> In the Package Explorer view, find <em>junit.textui.TestRunner.java</em> 
     and double-click it to open it in an editor. </li>
   <li> In the Outline view, notice that the TestRunner class has an icon which 
-    indicates that this class defines a <code>main</code> method. 
+    indicates that the class defines a <code>main</code> method. 
     <p> <img src="../images/qs-58.gif" alt="Outline view with selected TestRunner class"> 
     </p>
   </li>
@@ -24,18 +24,23 @@
     in the Navigator, as a local Java application. 
     <p> <img src="../images/qs-59.gif" alt="Run drop down menu"> </p>
   </li>
-  <li> Notice that the program has run and the following message appears in the 
-    Console view telling you that the program needs an execution argument. 
+  <li> Notice that the program has finished running and the following message appears in the 
+    Console view telling you that the program needs an execution argument.&nbsp;
+    Running a program as a Java Application uses the default settings for
+    launching the selected class and does not allow you to specify any
+    arguments. 
     <p> <img src="../images/qs-60.gif" alt="Console with error message: Usage: TestRunner [-wait] testCaseName, where name is the name of the TestCase class"> 
     </p>
   </li>
-  <li> Using the drop-down <strong>Run</strong> menu in the toolbar, select <strong>Run...</strong>. 
+  <li> To specify arguments, use the drop-down <strong>Run</strong> menu in the
+    toolbar and select <strong>Run...</strong>. 
     <p> <img src="../images/qs-61.gif" alt="Run menu of the toolbar"> </p>
   </li>
-  <li> The Launch Configurations dialog opens, and the TestRunner launch configuration 
-    is selected. When you ran the program using the Java Application shortcut, 
-    a launch configuration was automatically created with default settings to 
-    launch the selected class. 
+  <li> This time, the Launch Configurations dialog opens with the TestRunner launch configuration selected.
+    A launch configuration allows you to configure how a program is launched,
+    including its arguments, classpath, and other options.&nbsp; (A default
+    launch configuration was created for you when you chose <strong>Run as &gt;
+    Java Application</strong>). 
     <p> <img src="../images/qs-62.gif" alt="Launch configuration dialog showing the Main tab"> 
     </p>
   </li>
@@ -48,21 +53,21 @@
     the number of tests that were run. 
     <p> <img src="../images/qs-64.gif" alt="Console showing program output"> </p>
   </li>
-  <li> Switch to the Debug perspective. In the Debug view, notice that a launch 
-    was registered each time the program was run. 
+  <li> Switch to the Debug perspective. In the Debug view, notice that a process
+    for the program launch was registered each time the program was run. 
     <p> <img src="../images/qs-65.gif" alt="Debug view showing two terminated run launches"> 
     </p>
     <em>Note: You can relaunch any of these processes by selecting <strong>Relaunch</strong> 
     from its context menu.</em> </li>
   <li> Select the drop-down menu from the <strong>Run</strong> button in the workbench 
-    toolbar. This list contains the previously launched configurations. Configurations 
-    can be relaunched by selecting them in this history list as well. 
-    <p> <img src="../images/qs-66.gif" alt="Run drop down menu from the workbench toolbar"> 
+    toolbar. This list contains the previously launched programs. These programs
+    can be relaunched by selecting them in the history list. 
+    <p> <img src="../images/qs-66.gif" alt="Run drop down menu from the workbench toolbar" width="137" height="106"> 
     </p>
   </li>
   <li> From the context menu in the Debug view (or the equivalent toolbar button), 
-    select <strong>Remove All Terminated</strong> to clear the view of terminated 
-    launches. 
+    select <strong>Remove All Terminated</strong> to clear the view of terminated
+    launch processes. 
     <p> <img src="../images/qs-67.gif" alt="Debug view showing context menu"> 
     </p>
   </li>
