--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -12,57 +12,73 @@
 <ol>
   <li> In the Package Explorer view in the Java perspective, double-click <em>junit.samples.VectorTest.java</em> 
     to open it in an editor. </li>
-  <li> Place your cursor on the marker bar (along the left edge of the editor 
-    area) on the following line in the setUp() method: 
+  <li> Place your cursor on the vertical ruler along the left edge of the editor
+    area on the following line in the setUp() method: 
     <p> <code>fFull.addElement (new Integer(1));</code> </p>
-    <p> and double-click to set a breakpoint. </p>
+    <p> and double-click on the ruler to set a breakpoint. </p>
     <p> <img src="../images/qs-68.gif" alt="VectorTest.java editor showing added breakpoint"> 
     </p>
-    <em>Note: The breakpoint is blue with no checkmark overlay as the breakpoint 
-    is not yet installed, meaning that the containing class has not yet been loaded 
-    by the Java VM.</em> </li>
+    The breakpoint icon indicates the status of the breakpoint.&nbsp; The plain
+    blue breakpoint icon indicates that the breakpoint has been set, but not yet
+    installed.&nbsp;&nbsp;
+    <p>
+    <em>Note: Once the class is loaded by the Java VM, the breakpoint will be
+    installed and a checkmark overlay will be displayed on the breakpoint icon.</em> </li>
   <li> In the Package Explorer view, select the <em>junit.samples</em> package 
     and select the Run menu. Within the Run menu, select Debug As, and then Java 
-    Application. </li>
+    Application.&nbsp; When you run a program from a package, you will be
+    prompted to choose a type from all classes in the package that define a <code>main
+    </code>method.&nbsp; </li>
   <li> Select the <em>VectorTest - junit.samples - /JUnit</em> item in the dialog, 
-    then click <strong>Finish</strong>. 
+    then click <strong>OK</strong>. 
     <p> <img src="../images/qs-69.gif" alt="Type selection dialog"> </p>
   </li>
-  <li> As soon as the breakpoint is hit, the Debug perspective opens, and execution 
+  <li> The program will run until the breakpoint is reached.&nbsp; When the breakpoint is hit, the Debug perspective opens, and execution 
     is suspended. Notice that the process is still active (not terminated) in 
     the Debug view. Other threads might still be running. 
-    <p> <img src="../images/qs-70.gif" alt="Debug perspective"> </p>
-    <em>Note: The breakpoint has an overlay icon of a checkmark because it is 
-    now installed (VectorTest has been loaded in the Java VM).</em> </li>
+    <p> <img src="../images/qs-70.gif" alt="Debug perspective" width="626" height="500"> </p>
+    <em>Note: The breakpoint now has a checkmark overlay since the class
+    VectorTest was loaded in the Java VM.</em> </li>
   <li> In the editor in the Debug perspective, select the entire line where the 
     breakpoint is set, and from its context menu, select <strong>Inspect</strong>. 
-    <p> <img src="../images/qs-71.gif" alt="VectorTest.java editor with selected breakpoint line showing context menu"> 
+    <p> <img src="../images/qs-71.gif" alt="VectorTest.java editor with selected breakpoint line showing context menu" width="555" height="378"> 
     </p>
   </li>
   <li> The expression is evaluated in the context of the current stack frame, 
-    and the results are displayed in the Expressions view. Select the expression 
-    in the Expressions view, and from its context menu, select <strong>Remove</strong>. 
+    and the results are displayed in the Expressions view. 
   </li>
-  <li> The Variables view displays the values of the variables in the selected 
+  <li> Expressions that you evaluate while debugging a program will be listed in
+    this view. To delete an expression after working with it, select the
+    expression and choose <strong>Remove</strong> from its context menu. 
+  </li>
+  <li> The Variables view (available on a tab along with the Expressions view) displays the values of the variables in the selected 
     stack frame. Expand the fFull tree in the Variables view until you can see 
     elementCount. 
-    <p> <img src="../images/qs-72.gif" alt="Variables view"> </p>
+    <p> <img src="../images/qs-72.gif" alt="Variables view" width="332" height="241"> </p>
   </li>
-  <li> Watch the variables (e.g., elementCount) in the Variables view as you step 
-    through VectorTest in the Debug view: 
-    <p> Click the <strong>Step Over</strong> button to step over the highlighted 
-      line of code. Execution will continue at the next line in the same method 
+  <li> The variables (e.g., elementCount) in the Variables view will change when
+    you step 
+    through VectorTest in the Debug view.&nbsp; To step through the code, click the <strong>Step Over</strong> button.&nbsp;
+    Execution will continue at the next line in the same method 
       (or, if you are at the end of a method, it will continue in the method from 
-      which the current method was called). </p>
-    <p> Note: The variables that are changed as a result of the last step are 
-      highlighted in the color specified in the Debug Variable Views &quot;Changed 
-      Variable Value Color&quot; preference (the default color is red). </p>
-    <p> <img src="../images/qs-73.gif" alt="TestCase.java editor showing current line of execution"> 
-    </p>
+      which the current method was called).
   </li>
-  <li> If the program has not executed fully when you are done debugging, select 
-    <strong>Terminate</strong> from the context menu of the program&#39;s launch 
-    item in the Debug view. </li>
+  <li> Try some other step buttons (<strong>Step Into, Step Return) </strong>to
+    step through the code.&nbsp; Note the differences in stepping techniques.
+  </li>
+  <li> You can end a debugging session by allowing the program to run to
+    completion or by terminating it.
+    <ul>
+      <li>You can continue to step over the code with the <strong>Step </strong>buttons
+        until the program completes.</li>
+      <li>You can click the&nbsp; <strong>Resume </strong>button to allow the
+        program to run until the next breakpoint is encountered or until the
+        program is completed.</li>
+      <li>You can select 
+    <strong>Terminate</strong> from the context menu of the program&#39;s
+        process in the Debug view to terminate the program.</li>
+    </ul>
+  </li>
 </ol>
 <p> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a> 
 </p>
