--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
@@ -8,39 +8,45 @@
 </head>
 <body>
 <h1> Evaluating snippets </h1>
-<p> In this section, you will evaluate Java expressions using the Java scrapbook. 
-  The scrapbook can be used to experiment with Java code fragments before putting 
-  them into your program. </p>
+<p> In this section, you will evaluate Java expressions using the Java scrapbook.
+Java scrapbook pages allow you to experiment with Java code fragments before
+putting them in your program. </p>
 <ol>
   <li> In the Java perspective, click the <strong>Create a Scrapbook Page</strong> 
-    button in the workbench toolbar. </li>
-  <li> In <strong>Enter or select the folder</strong> field, type or browse below 
-    to select the JUnit project root directory (<em>JUnit</em> ). </li>
-  <li> In the <strong>File name</strong> field, type <em>MyScrap</em>. The JPAGE 
-    file extension will be added automatically, if you do not enter it yourself. 
-    <p> <img src="../images/qs-77.gif" alt="Create Java Scrapbook Page wizard"> 
-    </p>
-    Click <strong>Finish</strong> when you are done. </li>
-  <li> The scrapbook page opens in an editor in the editor area. 
+    button in the workbench toolbar.&nbsp; You will be prompted for a folder
+    destination for the page. <p> <img src="../images/qs-77.gif" alt="Create Java Scrapbook Page wizard"> 
+    </p></li>
+  <li> In the <strong>Enter or select the folder</strong> field, type or browse below 
+    to select the <em>JUnit</em> project root directory. </li>
+  <li> In the <strong>File name</strong> field, type <em>MyScrap</em>.&nbsp; </li>
+  <li>  
+    
+    Click <strong>Finish</strong> when you are done.&nbsp; A scrapbook page
+    resource is created for you with the <em>jpage</em> file extension.&nbsp; (The <em>jpage
+    </em>file extension will be added automatically if you do not enter it yourself.)&nbsp;
+    The scrapbook page opens automatically in an editor. 
     <p> <img src="../images/qs-78.gif" alt="Package Explorer and editor area of the active perspective"> 
     </p>
-  </li>
-  <li> In the editor, type <em>System.get</em> and then use content assist (Ctrl+Space) 
-    to complete the snippet as <em>System.getProperties()</em>. 
+ </li>
+  <li> In the editor, type <code>System.get</code> and then use content assist (Ctrl+Space) 
+    to complete the snippet as <code>System.getProperties()</code>. 
     <p> <img src="../images/qs-79.gif" alt="Content proposals popup"> </p>
   </li>
   <li> Select the entire line you just typed and select <strong>Display</strong> 
-    from the context menu or select the equivalent item the editor toolbar or 
-    <strong>Run</strong> menu. 
+    from the context menu.&nbsp; You can also select <strong>Display Result of
+    Evaluating Selected Text</strong> from the toolbar. 
     <p> <img src="../images/qs-80.gif" alt="Snippet editor with System.getProperties() selected showing context menu"> 
     </p>
   </li>
-  <li> When the evaluation completes, the result of the evaluation is highlighted 
-    in the scrapbook page. <br>
-    Note: Snippets can be inspected and run in a similar manner. </li>
-  <li> Save and close the snippet file by clicking the <strong>Close</strong> 
-    button in the view toolbar and then selecting <strong>Yes</strong> in the 
-    Save dialog. </li>
+  <li> When the evaluation completes, the result of the evaluation is displayed
+    and highlighted 
+    in the scrapbook page. </li>
+  <li> You can inspect the result of an evaluation by selecting text and
+    choosing <strong>Inspect</strong> from the context menu (or selecting <strong>Inspect
+    Result of Evaluating Selected Text</strong> from the toolbar.) </li>
+  <li> When you are finished evaluating code snippets in the scrapbook page, you
+    can close the editor.&nbsp; Save the changes in the page if you want to keep
+    the snippets for future use. </li>
 </ol>
 <p> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a> 
 </p>
