--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
@@ -8,31 +8,32 @@
 </head>
 <body>
 <h1> Evaluating expressions </h1>
-<p> In this section, you will evaluate expressions from your Java code. </p>
+<p> In this section, you will evaluate expressions in the context of your
+running Java program. </p>
 <ol>
-  <li> Debug <em>junit.samples.VectorTest.java</em> to a breakpoint at line 26 
-    (see the <a href="qs-13.htm">Debugging your Programs</a> section for full 
-    details).<br>
-    In the Display view in the Debug perspective, type the following line: 
-    <p></p>
+  <li> Debug <em>junit.samples.VectorTest.java</em> to the breakpoint in the
+    <code>setup()</code> method.&nbsp; (See the <a href="qs-13.htm">Debugging your Programs</a> section for full
+    details.)<br>
+    In the Display view in the Debug perspective, type the following line:
     <p> <code>fFull.size()</code></p>
-    <p> <strong>Note:</strong> Instead of typing the full expression by hand you 
-      can use code assist to complete it. </p>
   </li>
-  <li> Select the text you just typed, and from its context menu, select <strong>Display</strong> 
-    (or the equivalent item in the Display view toolbar or Run menu). 
+  <li> Select the text you just typed, and from its context menu, select <strong>Display</strong>.&nbsp;
+    (You can also choose <strong>Display Result of Evaluating Selected Text </strong>from
+    the Display view toolbar.) 
     <p> <img src="../images/qs-74.gif" alt="Display view with fFull.size selected and showing context menu"> 
     </p>
   </li>
-  <li> The expression is evaluated. 
+  <li> The expression is evaluated and the result is displayed in the Display
+    view. 
     <p> <img src="../images/qs-75.gif" alt="Display view showing evaluation result: (int) 0"> 
     </p>
   </li>
   <li> On a new line in the Display view, type the following line: 
     <p> <code>fFull.toArray()</code> </p>
   </li>
-  <li> Select this line, and select <strong>Inspect</strong> from the Display 
-    view context menu (or the equivalent item in the toolbar or Run menu). </li>
+  <li> Select this line, and select <strong>Inspect</strong> from the context
+    menu.&nbsp; (You can also choose <strong>Inspect Result of Evaluating
+    Selected Text </strong>from the Display view toolbar.) </li>
   <li> The Expressions view opens with the value of the evaluated expression. 
     <p> <img src="../images/qs-76.gif" alt="Expressions view containing fFull.toArray() expression"> 
     </p>
