--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -40,57 +40,65 @@
     </h2>
     <ol>
       <li>
-        Open the workbench preferences by selecting the menu item Window &gt; Preferences.
+        Select the menu item <b> Window &gt; Preferences</b> to open the workbench preferences.&nbsp;
       </li>
       <li>
-        Go to the <strong>Installed Java Runtime Environments</strong> preference page by selecting Java &gt; Installed JREs in the tree pane on the left. Confirm
+        Select <b>Java &gt; Installed JREs</b> in the tree pane on the left to
+        display the <strong>Installed Java Runtime Environments</strong> preference page. Confirm
         that a JRE has been detected. By default, the JRE used to run the workbench will be used to build and run Java programs. It should appear with a check mark in the list of
         installed JREs.
 		<p>
-		<img src="../images/qs-1.gif" alt="Installed JREs preference page">
+		<img src="../images/qs-1.gif" alt="Installed JREs preference page" width="429" height="98">
 		</p>
       </li>
       <li>
-        Go to the <strong>Workbench</strong> preference page by selecting <strong>Workbench</strong> in the tree pane. Confirm that the <strong>Perform build automatically on
+        Select <strong>Workbench</strong> in the tree pane to display the <strong>Workbench</strong> preference page. Confirm that the <strong>Perform build automatically on
         resource modification</strong> option is checked.
 		<p>
 		<img src="../images/qs-2.gif" alt="Workbench preference page">
 		</p>
       </li>
       <li>
-        Go to the <strong>New Project</strong> preference page by selecting <strong>New Project</strong> in the tree pane. Confirm that <strong>As source and output location
+        Select <b>Java &gt; New Project </b> in the tree pane to display the <strong>New Project</strong> preference page. Confirm that <strong>As source and output location
         use</strong> is set to <strong>Project</strong>.
 		<p>
 		<img src="../images/qs-3.gif" alt="New project preference page">
 		</p>
       </li>
       <li>
-        Go to the <strong>Java Editor</strong> preference page by selecting <strong>Java &gt; Editor</strong> in the tree pane. On the preference page, press the <strong>Problem
+        Select <strong>Java &gt; Editor</strong> in the tree pane to display the <strong>Java Editor</strong> preference page. On the preference page, press the <strong>Problem
         Indication</strong> tab. Confirm that all options are checked.
 		<p>
 		<img src="../images/qs-17a.gif" alt="Java Editor preference page">
 		</p>
       </li>
       <li>
-        Leave the preferences by clicking on <strong>OK</strong>.
+        Click on <strong>OK</strong> to save the preferences.
       </li>
     </ol>
     <h2>
       Installing the JDT example plug-ins
     </h2>
     <p>
-      The JDT example plug-ins contribute a New Wizard that automatically creates a sample project in your workbench. For this tutorial, however, we will perform these steps
-      manually.
+      The JDT example plug-ins contribute a New Wizard that automatically creates a sample project in your workbench. For this tutorial,
+      you will
+    manually create our new project in order to review the steps involved.&nbsp;
+      But first you must download and install
+    the examples if you have not done so already.
     </p>
     <ol>
       <li>
-        Download the Zip file containing the example plug-ins from <a href="http://www.eclipse.org/downloads/">http://www.eclipse.org/downloads/</a>.
+        Go to the <a href="http://www.eclipse.org/downloads/">http://www.eclipse.org/downloads/</a>
+        page and locate the release that you are working with.
+      </li>
+      <li>
+        Download the Example Plug-ins zip file appropriate for your platform.
       </li>
       <li>
         If the workbench is running, shut it down. Plug-ins should not be installed while the workbench is running.
       </li>
       <li>
-        Extract the contents of the Zip file to the root directory of your workbench installation (e.g. <em>c:\eclipse\plugins\</em>).
+        Extract the contents of the Zip file to the root directory of your workbench installation (e.g. <em>c:\eclipse</em>).
       </li>
       <li>
         Start the workbench.
