--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -13,17 +13,20 @@
       Creating your first Java project
     </h1>
     <p>
-      In this section, you will create a new Java project. As an example project, we will use JUnit. JUnit is an open source unit testing framework for Java. Refer to <a href=
+      In this section, you will create a new Java project. You will be using
+      JUnit as your example project. JUnit is an open source unit testing framework for Java. Refer to <a href=
       "http://www.junit.org">http://www.junit.org/</a> for more information on JUnit.
     </p>
     <ol>
       <li>
-        Open the <strong>New Project</strong> wizard by selecting the menu item <strong>File &gt; New &gt; Project...</strong>.
+        Select the menu item <strong>File &gt; New &gt; Project...</strong>. to
+        open the <strong>New Project</strong> wizard.
       </li>
       <li>
-        On the left pane of the first wizard page, select <strong>Java</strong>, and on the right pane, select <strong>Java Project</strong>. Then click <strong>Next</strong>. In
-        the <strong>Project name</strong> field, type &quot;JUnit&quot;, then click <strong>Finish</strong>. A new Java perspective opens within the workbench with the new Java
-        project in the Package Explorer. Along with the new Java perspective, new menu options and Java specific buttons are loaded in the workbench toolbar. Depending on which
+        On the left pane of the first wizard page, select <strong>Java</strong>, and on the right pane, select <strong>Java Project</strong>. Then click <strong>Next</strong>.
+        On the next page, type &quot;JUnit&quot; in the <strong>Project name</strong> 
+        field and click <strong>Finish</strong>.&nbsp; A Java perspective opens within the workbench with the new Java
+        project in the Package Explorer. When the Java perspective is active, new menu options and Java specific buttons are loaded in the workbench toolbar. Depending on which
         view or editor is active, other buttons and menu options will be available.
 		<p>
 		<img src="../images/qs-4.gif" alt="Java perspective">
@@ -41,7 +44,7 @@
          <strong>Note:</strong> This step assumes that the JDT example&nbsp;plug-ins have been downloaded and installed.<br>
       </li>
       <li>
-        Below the import hierarchy list in the Import wizard, click the <strong>Select All</strong> button. You can expand and select elements within the <em>junit</em> directory
+        Below the hierarchy list in the Import wizard, click the <strong>Select All</strong> button. You can expand and select elements within the <em>junit</em> directory
         on the left pane to view the individual resources that you are importing on the right pane. <em>Note: Do not deselect any of the resources in the</em> junit directory at
         this time. You will need all of these resources in the tutorial.
 		<p>
@@ -51,7 +54,10 @@
       <li>
         Make sure that the JUnit project appears in the destination <strong>Folder</strong> field. Then click <strong>Finish</strong>. In the import progress indicator, notice
         that the imported resources are compiled as they are imported into the workbench. This is because the <strong>Perform build automatically on resource modification</strong>
-        option is checked on the Workbench preferences page.
+        option is checked on the Workbench preferences page.&nbsp; (You will be
+        prompted to overwrite the .classpath file in the JUnit project.&nbsp;
+        This is because the .classpath resource was created for you when you
+        created the JUnit project.&nbsp; It is safe to overwrite this file.)
       </li>
       <li>
         In the Package Explorer view, expand the JUnit project to view the JUnit packages.
