--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -20,10 +20,13 @@
         In the Package Explorer view, expand the JUnit project to see its packages.
       </li>
       <li>
-        Expand the package <code>junit.framework</code> and find the Java files contained in the package.
+        Expand the package <code>junit.framework</code> to see the Java files contained in the package.
       </li>
       <li>
-        Expand the Java file <code>TestCase.java</code> and find the import declaration, the public type and its members.
+        Expand the Java file <code>TestCase.java. </code>Note that the Package
+        Explorer shows Java-specific sub-elements of the source code file.&nbsp;
+        The import declaration, the public type, and its members (fields and
+        methods) appear in the tree.
       </li>
     </ol>
     <img src="../images/qs-7.gif" alt="Package explorer"> 
