*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -33,7 +33,7 @@
       <li>
         You can get the local history of an individual method or field.<br>
          Select a method or a field in the Outline or Hierarchy view and execute <strong>Replace With &gt; Local history</strong> from the pop-up menu.<br>
-         This will show you the history of this particular method or field and you can select which version should replace the one in the workspace.<br>
+         This will show you the history of this particular method or field and you can select which version should replace the one in the workspace.
       </li>
       <li>
         Similarly, you can add a deleted method or field by using the local history.<br>
