--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-12.htm
@@ -42,6 +42,17 @@
         Rename</strong> from the menu bar or pop-up menu.<br>
       </li>
     </ul>
+    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" width="159" height="27">
+    <p><a href="../concepts/concepts-9.htm">Refactoring support</a></p>
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" width="159" height="27"></p>
+    <p><a href="../tasks/tasks-80.htm">Refactoring</a><br>
+    <a href="../tasks/tasks-85.htm">Copying and moving Java elements</a><br>
+    <a href="../tasks/tasks-51.htm">Moving folders, packages and files</a></p>
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" width="159" height="27"></p>
+    <p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
+    <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+    <a href="../reference/ref-23.htm">Refactoring preferences</a></p>
+    <p>&nbsp;</p>
 	<p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 	</p>  
