--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
@@ -14,17 +14,42 @@
     </h1>
     <ul>
       <li>
-        Templates try to guess the variable name. For instance, if you have an array called foos, the for template will notice this: <code>void m(int[] foos){ for&lt;&lt;press
-        Ctrl+Space here to enter the <em>for - iterate over array</em> template<br>
-        }</code> you get: <code>void m(int[] foos) { for (int i= 0; i &lt; foos.length; i++) { } }</code>
+        When you get a list of templates in the content assist list (after
+        pressing Ctrl+Space), you can filter the list by typing additional
+        characters in the template's name.
       </li>
       <li>
-        You can define your own templates. Go to <strong>Window &gt; Preferences &gt; Java &gt; Templates</strong> and press the <strong>New...</strong> button.
+        You can define your own templates. Go to <strong>Window &gt; Preferences &gt; Java &gt; Templates</strong> and press the <strong>New...</strong> button.&nbsp;
+        You can name your template and assign variables that will be filled in
+        by the editor when the template is inserted.
       </li>
       <li>
-        In template definitions, $ must be escaped by another $. So you write $$Log:$$ if you want $Log:$ to appear in the editor.
+        When a template is inserted in the editor, it tries to guess the
+        variable names.&nbsp; For example, if your template includes a reference
+        to an array, the template will try to resolve the array name when
+        inserted in code.&nbsp; If your code contains this statement:<br>
+ <code>void m(int[] foos){ for<br>
+        </code> and you use content assist to use te template &quot;for -
+        iterate over array,&quot; the template will insert:&nbsp; <code><br>
+        void m(int[] foos) { for (int i= 0; i &lt; foos.length; i++) { } }</code> 
+      </li>
+      <li>
+        The dollar sign, $, is used to denote variables in a template.&nbsp; If
+        you need to include the dollar sign character itself in the template,
+        you must refer to it with $$.
       </li>
     </ul>
+
+    <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+     <a href="../concepts/ctemplates.htm">Templates</a></p>
+
+    <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+    <a href="../tasks/tasks-203.htm">Using templates<br>
+    Writing your own templates</a></p>
+
+    <p><img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
+     <a href="../reference/ref-preferences-templates.htm">Template preference page</a></p>
+
 	<p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
 	</p>
