--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
@@ -23,6 +23,12 @@
         You can change the orientation (from the default vertical to horizontal) of the Hierarchy view by using the Menu toolbar button.
       </li>
     </ul>
+<p> <img src="../images/ngrelt.gif" alt="Related tasks" border="0"> 
+</p>
+<p> <a href="../tasks/tasks-37.htm">Using the Hierarchy view</a> </p>
+<p> <img src="../images/ngrelr.gif" alt="Related reference" border="0"> 
+</p>
+<p> <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a> </p>
     <p>
        <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
