--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
@@ -13,39 +13,31 @@
       Search
     </h1>
     <p>
-      To search for methods with a certain return type:
+      To search for methods with a certain return type, use &quot;* &lt;return
+    type&gt; as follows:
     </p>
     <ol>
       <li>
-        Open the search dialog.
+        Open the search dialog and click on the <strong>Java Search</strong> tab.
       </li>
       <li>
-        Switch to <strong>Java Search</strong> tab.
+        Type &quot;*&quot; and the return type, separated by a space, in the <strong>Search string</strong>.&nbsp;
+        For example<br>
+        &nbsp;&nbsp;&nbsp; * TestCase<br>
+        would be typed to find methods that return a TestCase.
       </li>
       <li>
-        Type in the <strong>Search string</strong>: &#39;* X&#39; (without the quotes, and with a space between the wild-card and X, where X is your return type).
-      </li>
-      <li>
-        Select <strong>Method</strong> and <strong>Declarations.</strong>
-      </li>
-      <li>
-        Use a working set to make the search faster..
-      </li>
-      <li>
-        Press <strong>Search</strong> .<br>
+        Select <strong>Method</strong> and <strong>Declarations</strong> and then click
+        <strong>Search.</strong>
+        <br>
       </li>
     </ol>
-    <p>
-      You can do global Find and Replace:
-    </p>
-    <ol>
-      <li>
-        Do a File search (choose the <strong>File</strong> tab in the search dialog).
-      </li>
-      <li>
-        Right-click on an entry in the Search view and use the <strong>Replace</strong> or <strong>Replace Selected</strong> from the pop-up menu.
-      </li>
-    </ol>
+    <img src="file:///C:/oti/eclipse/workspace/org.eclipse.jdt.doc.user/images/ngrelc.gif" alt="Related concepts" border="0" width="159" height="27">
+    <p><a href="../concepts/concepts-8.htm">Java search</a></p>
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" width="159" height="27"></p>
+    <p><a href="../tasks/tasks-103.htm">Conducting a Java search using the
+    search dialog</a><br>
+    <a href="../tasks/tasks-104.htm">Conducting a Java search using pop-up menus</a></p>
 	<p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 	</p>
