--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-6.htm
@@ -43,13 +43,20 @@
         Code assist works in import statements and presents a list of packages and types.
       </li>
       <li>
-        Code assist suggests variable names: <code>URL &lt;code assist&gt;</code> suggests <code>url</code> as a possible variable name.<br>
+        Code assist suggests variable names: <code>URL &lt;code assist&gt;</code> suggests <code>url</code> as a possible variable name.
       </li>
       <li>
         Code assist can be activated automatically. Select the <strong>Window &gt; Preferences &gt; Java &gt; Editor &gt; Code Assist &gt; Enable auto activation</strong>
         checkbox.<br>
       </li>
     </ul>
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" width="159" height="27"></p>
+    <p><a href="../tasks/tasks-65.htm">Using content assist</a><br>
+    </p>
+    <p><img src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
+    </p>
+    <p><a href="../reference/ref-143.htm">Java Content Assist</a><br>
+    </p>
     <p>
        <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
