--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
@@ -77,6 +77,16 @@
         </ul>
       </li>
     </ul>
+    <p><img border="0" src="file:///C:/oti/eclipse/workspace/org.eclipse.jdt.doc.user/images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+    <p><a href="../concepts/concepts-7.htm">Java editor</a><br>
+    </p>
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" width="159" height="27"></p>
+    <p><a href="../tasks/tasks-54.htm">Using the Java editor</a><br>
+    </p>
+    <p><img src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
+    <p><a href="../reference/ref-21.htm">Java Editor Preferences</a><br>
+    </p>
+    <p>&nbsp;</p>
     <p>
        <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
