--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-9.htm
@@ -37,6 +37,16 @@
         </ul>
       </li>
     </ul>
+
+    <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+     <a href="../concepts/cbuildcp.htm">Build classpath</a></p>
+
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+     <a href="../reference/ref-15.htm">Classpath Variables preferences</a><br>
+     <a href="../reference/ref-123.htm">Java Build Path properties</a><br>
+    </p>
+
+    <p>&nbsp;</p>
     <p>
        <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
