--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
@@ -22,6 +22,13 @@
         JUnit &gt; Show the JUnit results view only when an error or failure occurs</strong> checkbox.
       </li>
     </ul>
+    <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" width="159" height="27"><br>
+    <a href="tasks-208.htm">Creating JUnit tests</a><br>
+    <a href="tasks-209.htm">Creating JUnit test suites</a><br>
+    <a href="tasks-210.htm">Running JUnit</a><br>
+    <a href="tasks-211.htm">Debugging a Test Failure</a></p>
+    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" width="159" height="27"><br>
+    <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a></p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
