*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
@@ -48,6 +48,20 @@ putting them in your program. </p>
     can close the editor.&nbsp; Save the changes in the page if you want to keep
     the snippets for future use. </li>
 </ol>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-10.htm">Debugger</a></p>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="../tasks/tasks-149.htm">Creating a Java scrapbook page</a><br>
+<a href="../tasks/tasks-151.htm">Displaying the result of evaluating an
+expression</a><br>
+<a href="../tasks/tasks-150.htm">Inspecting the result of evaluating an
+expression</a><br>
+<a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a></p>
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+<a href="../reference/ref-129.htm">New Java Scrapbook Page wizard</a><br>
+<a href="../reference/ref-34.htm">Java scrapbook page</a><br>
+<a href="../reference/ref-56.htm">Expressions view</a></p>
+<p>&nbsp;</p>
 <p> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a> 
 </p>
 </body>
