--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -72,6 +72,20 @@
     </p>
   </li>
 </ol>
+
+    <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+     <a href="../tasks/tasks-9.htm">Changing debugger launch options</a><br>
+     <a href="../tasks/tasks-141.htm">Connecting to a remote VM with the Remote Java application launch configuration</a><br>
+     <a href="../tasks/tasks-142.htm">Disconnecting from a VM</a><br>
+     <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
+     <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
+    </p>
+
+    <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+     <a href="../reference/ref-51.htm">Debug view</a><br>
+     <a href="../reference/ref-4.htm">Run and debug actions</a><br>
+    </p>
+
 <p> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a> 
 </p>
 </body>
