--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -80,6 +80,29 @@
     </ul>
   </li>
 </ol>
+
+    <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+     <a href="../concepts/cbrkpnts.htm">Breakpoints</a><br>
+     <a href="../concepts/cremdbug.htm">Remote debugging</a><br>
+     <a href="../concepts/clocdbug.htm">Local debugging</a></p>
+
+    <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+     <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
+     <a href="../tasks/tasks-135.htm">Resuming the execution of suspended threads</a><br>
+     <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
+     <a href="../tasks/tasks-134.htm">Suspending threads</a></p>
+
+    <p><img border="0" src="../images/ngrelr.gif" alt="Related reference"><br>
+     <a href="../reference/ref-11.htm">Debug preferences</a><br>
+     <a href="../reference/ref-51.htm">Debug view</a><br>
+     <a href="../reference/ref-4.htm">Run and debug actions</a><br>
+     <a href="../reference/ref-debugappearance.htm">Debug Appearance<br>
+    </a><a href="../reference/ref-35.htm">Breakpoints view</a><br>
+     <a href="../reference/ref-45.htm">Console view</a><br>
+     <a href="../reference/ref-52.htm">Display view</a><br>
+     <a href="../reference/ref-56.htm">Expressions view</a><br>
+     <a href="../reference/ref-74.htm">Variables view</a></p>
+
 <p> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a> 
 </p>
 </body>
